--- a/HW1.css
+++ b/HW1.css
@@ -10,14 +10,12 @@ body {
 
 .back {
     width: 100%;
-    height: 160vh;
     background-color: #fafad2;
     display: flex;
 }
 
 .back .box {
     width: 70%;
-    height: 133vh;
     background-color: white;
     margin: auto;
     border: 2px solid rgba(0, 0, 0, 0.121);
@@ -202,6 +200,6 @@ body {
     color: white;
     padding: 1px 4px;
     border: none;
-    margin-top: 15px;
+    margin: 15px 0px;
 }
 
